<resources>
    <string name="app_name">device</string>

    <!--run infor-->
    <string name="speed">速度</string>
    <string name="incline">坡度</string>
    <string name="time">时间</string>
    <string name="distance">距离</string>
    <string name="calorie">卡路里</string>
    <string name="heart_rate">心率</string>
    <string name="weight">体重</string>
    <string name="age">年龄</string>
    <string name="over_range">超出(%1$.1f-%2$.1f)范围，请重设!</string>

    <!--unit-->
    <string name="speed_unit">km/h</string>
    <string name="incline_unit">%</string>
    <string name="distance_unit">km</string>
    <string name="calorie_unit">kcal</string>
    <string name="weight_unit">kg</string>
    <string name="heart_rate_unit">kpm</string>
    <string name="min_unit">min</string>

    <!--title-->
    <string name="title_start_activity">请选择锻炼类型</string>
    <string name="title_stop_activity">运动成绩</string>
    <string name="title_run_infor_activity">运动信息</string>

    <!--settings item-->
    <string name="settings_device_infor">设备信息</string>
    <string name="settings_parameter">参数设置</string>
    <string name="settings_calibration">校准</string>
    <string name="settings_install">安装应用</string>
    <string name="settings_uninstall">卸载应用</string>
    <string name="settings_system">系统设置</string>
    <string name="settings_file">文件管理</string>
    <string name="settings_other">其他设置</string>

    <string name="settings_language">语言</string>
    <string name="settings_net">网络</string>
    <string name="settings_bluetoolth">蓝牙</string>
    <string name="settings_device">设备</string>

    <!--face-->
    <string name="splash_text">Face Recognition</string>
    <string name="main_item_face_register">人脸注册</string>
    <string name="main_item_face_recognition">人脸识别 1v1</string>
    <string name="main_item_face_recognition_n">人脸识别 1vN</string>
    <string name="main_item_face_recognition_id">人脸识别 公安验证</string>
    <string name="main_item_face_live">活体检测</string>
    <string name="main_item_face_detect">人脸图像采集</string>
    <string name="main_item_face_lite">人脸图像验证</string>
    <string name="main_item_face_bank_cards">银行卡</string>
    <string name="main_item_face_id_cards">身份证</string>
    <string name="main_item_face_delete">删除功能</string>
    <string name="play">play</string>
    <string name="stop_playback">stop playback</string>
    <string name="stop">stop</string>
    <string name="record">record</string>
    <string name="stop_recording">stop recording</string>
    <string name="zero">0</string>

</resources>
