<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:Commons="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/bg_skin"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:layout_marginLeft="88dp"
        android:layout_marginRight="88dp"
        android:layout_marginTop="36dp"
        android:orientation="horizontal">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="34dp"
            android:fadeScrollbars="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/settings_language_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_setting_item"
                        android:button="@drawable/ic_setting_language"
                        android:drawablePadding="20dp"
                        android:paddingLeft="24dp"
                        android:text="@string/settings_language"
                        android:textColor="@color/commonColor2"
                        android:textSize="@dimen/tx_size4">

                    </RadioButton>

                    <RadioButton
                        android:id="@+id/settings_net_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/btn_setting_item"
                        android:button="@drawable/ic_setting_wifi"
                        android:drawablePadding="20dp"
                        android:paddingLeft="24dp"
                        android:text="@string/settings_net"
                        android:textColor="@color/commonColor2"
                        android:textSize="@dimen/tx_size4">

                    </RadioButton>

                    <RadioButton
                        android:id="@+id/settings_bluetooth_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/btn_setting_item"
                        android:button="@drawable/ic_setting_bluetooth"
                        android:drawablePadding="20dp"
                        android:paddingLeft="24dp"
                        android:text="@string/settings_bluetoolth"
                        android:textColor="@color/commonColor2"
                        android:textSize="@dimen/tx_size4">

                    </RadioButton>

                    <RadioButton
                        android:id="@+id/settings_device_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/btn_setting_item"
                        android:button="@drawable/ic_setting_device"
                        android:drawablePadding="20dp"
                        android:paddingLeft="24dp"
                        android:text="@string/settings_other"
                        android:textColor="@color/commonColor2"
                        android:textSize="@dimen/tx_size4">
                    </RadioButton>
                </RadioGroup>
            </LinearLayout>
        </ScrollView>

        <FrameLayout
            android:id="@+id/settings_fl"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </FrameLayout>
    </LinearLayout>
</LinearLayout>